2014-12-03  François  <francois@dechelle.net>

	* fixed problem after update to clamav 0.98.5; don't know exactly what was the problem...

2014-08-28  François Déchelle  <francois@dechelle.net>

	* changed scan function to set module report

2014-08-06  François Déchelle  <francois@dechelle.net>

	* implemented first version; works and scans ok

