@@ -3,8 +3,8 @@
 #
 [clamav]
 
-# additional signatures databases directory
-#db=/var/lib/uhuru/db/clamav/unsupported
+# default signatures databases directory
+#dbdir=/var/lib/uhuru/bases/clamav
 
 # additional signatures database
-#db=/var/lib/uhuru/db/clamav/oiv.db
+#db=/var/lib/uhuru/bases/clamav/extras/oiv.db
