@@ -1,9 +1,9 @@
-#modulesdir=@LIBUHURU_MODDIR@
 modulesdir=$(libdir)/libuhuru/modules
 modules_LTLIBRARIES=clamav.la
 
 clamav_la_SOURCES=clamav.c
 
+AM_CPPFLAGS= -DMODULE_CLAMAV_DBDIR='"@MODULE_CLAMAV_DBDIR@"'
 clamav_la_LDFLAGS= -module -avoid-version
 clamav_la_CFLAGS=
 clamav_la_LIBADD=
