@@ -3,6 +3,5 @@
 #
 [module5_2]
 
-# databases directory
-dbdir=/var/lib/umwsu/module5-2/db/
-
+# default databases directory
+#dbdir=/var/lib/uhuru/bases/module5_2
