@@ -1,3 +1,7 @@
+2015-08-04  François  <francois@dechelle.net>
+
+	* * changed bases default directory; now /var/lib/uhuru/bases/clamav
+
 2014-12-03  François  <francois@dechelle.net>
 
 	* fixed problem after update to clamav 0.98.5; don't know exactly what was the problem...
